{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 180,
  "lineage": "26bea030-4691-35eb-8ea9-33a5aecb2d4d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04581fbf744a7d11f",
            "arn": "arn:aws:ec2:us-east-1:005816951985:instance/i-0dd9adfcee647d819",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd9adfcee647d819",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a199c9789afd4364",
            "private_dns": "ip-10-0-1-107.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.107",
            "public_ip": "34.201.56.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01bc9d61c91c0ba14",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0050d15ea528053d7",
            "tags": {
              "Name": "biryani-contest"
            },
            "tags_all": {
              "Name": "biryani-contest"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-020376b3c5c00dff6"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005816951985:internet-gateway/igw-0611c387c00ad5d2c",
            "id": "igw-0611c387c00ad5d2c",
            "owner_id": "005816951985",
            "tags": {
              "Name": "contest-igw"
            },
            "tags_all": {
              "Name": "contest-igw"
            },
            "vpc_id": "vpc-0070c188efb7fc55e"
          },
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tfrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005816951985:route-table/rtb-0500f7398acc525d7",
            "id": "rtb-0500f7398acc525d7",
            "owner_id": "005816951985",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0611c387c00ad5d2c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "contest-pub-rt"
            },
            "tags_all": {
              "Name": "contest-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0070c188efb7fc55e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publisubrt1as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3605585aa5c5b40",
            "route_table_id": "rtb-0500f7398acc525d7",
            "subnet_id": "subnet-0050d15ea528053d7"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.tfrt",
            "aws_subnet.public",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publisubrt2as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f520d7b6edc86e0",
            "route_table_id": "rtb-0500f7398acc525d7",
            "subnet_id": "subnet-0b8beb0cec3ba0703"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.tfrt",
            "aws_subnet.public2",
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005816951985:security-group/sg-020376b3c5c00dff6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-020376b3c5c00dff6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-sg-20230331104650140900000001",
            "name_prefix": "tf-sg-",
            "owner_id": "005816951985",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "contest-sg"
            },
            "tags_all": {
              "Name": "contest-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0070c188efb7fc55e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgrds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005816951985:security-group/sg-05cdbc5b7348fdd90",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05cdbc5b7348fdd90",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-sgrds-20230331104650141500000002",
            "name_prefix": "tf-sgrds-",
            "owner_id": "005816951985",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "contest-sgrds"
            },
            "tags_all": {
              "Name": "contest-sgrds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0070c188efb7fc55e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005816951985:subnet/subnet-0050d15ea528053d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0050d15ea528053d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "005816951985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "contest-public-subnet1"
            },
            "tags_all": {
              "Name": "contest-public-subnet1"
            },
            "vpc_id": "vpc-0070c188efb7fc55e"
          },
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005816951985:subnet/subnet-0b8beb0cec3ba0703",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8beb0cec3ba0703",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "005816951985",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "contest-public-subnet2"
            },
            "tags_all": {
              "Name": "contest-public-subnet2"
            },
            "vpc_id": "vpc-0070c188efb7fc55e"
          },
          "dependencies": [
            "aws_vpc.tfvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tfvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005816951985:vpc/vpc-0070c188efb7fc55e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dc3df38dd8aa189a",
            "default_route_table_id": "rtb-0d30b1f71c6593165",
            "default_security_group_id": "sg-09b619ad9e14e6525",
            "dhcp_options_id": "dopt-008f3e642da82a7ea",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0070c188efb7fc55e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d30b1f71c6593165",
            "owner_id": "005816951985",
            "tags": {
              "Name": "contest-vpc"
            },
            "tags_all": {
              "Name": "contest-vpc"
            }
          }
        }
      ]
    }
  ]
}